@@ -1,3 +1,10 @@
+openmolar (0.2.2+bzr0765-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream version
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 28 Sep 2012 12:32:00 +0100
+
+
 openmolar (0.2.2+bzr0763-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream version
